# editor

./: .gitignore  README.md  pyproject.toml
example_data/: dmp.md
src/editor_app/: cli.py  llm_client.py  server.py
src/editor_app/web/: app.js  index.html  styles.css
